--- a/appinfo.json
+++ b/appinfo.json
@@ -30,6 +30,11 @@
                 "type": "font"
             },
             {
+                "file": "images/menu_icon.png",
+                "name": "IMAGES_MENU_ICON_PNG",
+                "type": "png"
+            },
+            {
                 "file": "images/logo_splash.png",
                 "name": "IMAGES_LOGO_SPLASH_PNG",
                 "type": "png"
